Added structure for the universe

--- a/ForgeWorld3.vcxproj
+++ b/ForgeWorld3.vcxproj
@@ -139,7 +139,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Chunk.cpp" />
     <ClCompile Include="ForgeWorld3.cpp" />
+    <ClCompile Include="GameSession.cpp" />
+    <ClCompile Include="Planet.cpp" />
+    <ClCompile Include="Spot.cpp" />
+    <ClCompile Include="Territory.cpp" />
+    <ClCompile Include="Universe.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Chunk.h" />
+    <ClInclude Include="GameSession.h" />
+    <ClInclude Include="Planet.h" />
+    <ClInclude Include="Spot.h" />
+    <ClInclude Include="Territory.h" />
+    <ClInclude Include="Universe.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
