--- a/ForgeWorld3.vcxproj
+++ b/ForgeWorld3.vcxproj
@@ -18,6 +18,25 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\Chunk.cpp" />
+    <ClCompile Include="src\ForgeWorld3.cpp" />
+    <ClCompile Include="src\GameSession.cpp" />
+    <ClCompile Include="src\Math.cpp" />
+    <ClCompile Include="src\Planet.cpp" />
+    <ClCompile Include="src\Territory.cpp" />
+    <ClCompile Include="src\Tile.cpp" />
+    <ClCompile Include="src\Universe.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="include\Chunk.h" />
+    <ClInclude Include="include\GameSession.h" />
+    <ClInclude Include="include\Math.h" />
+    <ClInclude Include="include\Planet.h" />
+    <ClInclude Include="include\Territory.h" />
+    <ClInclude Include="include\Tile.h" />
+    <ClInclude Include="include\Universe.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
@@ -138,25 +157,6 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="Chunk.cpp" />
-    <ClCompile Include="ForgeWorld3.cpp" />
-    <ClCompile Include="GameSession.cpp" />
-    <ClCompile Include="Math.cpp" />
-    <ClCompile Include="Planet.cpp" />
-    <ClCompile Include="Tile.cpp" />
-    <ClCompile Include="Territory.cpp" />
-    <ClCompile Include="Universe.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Chunk.h" />
-    <ClInclude Include="GameSession.h" />
-    <ClInclude Include="Math.h" />
-    <ClInclude Include="Planet.h" />
-    <ClInclude Include="Tile.h" />
-    <ClInclude Include="Territory.h" />
-    <ClInclude Include="Universe.h" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
