--- a/ForgeWorld3.vcxproj
+++ b/ForgeWorld3.vcxproj
@@ -34,6 +34,7 @@
     <ClCompile Include="src\Territory.cpp" />
     <ClCompile Include="src\Tile.cpp" />
     <ClCompile Include="src\Unit.cpp" />
+    <ClCompile Include="src\MetricUnit.cpp" />
     <ClCompile Include="src\Universe.cpp" />
     <ClCompile Include="src\Window.cpp" />
   </ItemGroup>
@@ -51,6 +52,7 @@
     <ClInclude Include="include\Territory.h" />
     <ClInclude Include="include\Tile.h" />
     <ClInclude Include="include\Unit.h" />
+    <ClInclude Include="include\MetricUnit.h" />
     <ClInclude Include="include\Universe.h" />
   </ItemGroup>
   <ItemGroup>
@@ -156,7 +158,7 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <TargetMachine>MachineX64</TargetMachine>
     </Link>
@@ -171,7 +173,7 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
