--- a/ForgeWorld3.vcxproj
+++ b/ForgeWorld3.vcxproj
@@ -19,12 +19,18 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="include\Window.h" />
+    <ClInclude Include="include\MapObject.fwd.h" />
+    <ClInclude Include="include\MapObjectTypesManager.h" />
+    <ClInclude Include="include\Territory.fwd.h" />
+    <ClInclude Include="include\Window.h" />
     <ClCompile Include="src\Chunk.cpp" />
     <ClCompile Include="src\Dimension.cpp" />
     <ClCompile Include="src\DimensionedQuantity.cpp" />
     <ClCompile Include="src\ForgeWorld3.cpp" />
     <ClCompile Include="src\GameSession.cpp" />
+    <ClCompile Include="src\MapObject.cpp" />
+    <ClCompile Include="src\MapObjectPosition.cpp" />
+    <ClCompile Include="src\MapObjectTypesManager.cpp" />
     <ClCompile Include="src\Math.cpp" />
     <ClCompile Include="src\Planet.cpp" />
     <ClCompile Include="src\Resource.cpp" />
@@ -43,6 +49,8 @@
     <ClInclude Include="include\Dimension.h" />
     <ClInclude Include="include\DimensionedQuantity.h" />
     <ClInclude Include="include\GameSession.h" />
+    <ClInclude Include="include\MapObject.h" />
+    <ClInclude Include="include\MapObjectPosition.h" />
     <ClInclude Include="include\Math.h" />
     <ClInclude Include="include\Planet.h" />
     <ClInclude Include="include\Resource.h" />
