--- a/ForgeWorld3.vcxproj
+++ b/ForgeWorld3.vcxproj
@@ -21,6 +21,11 @@
   <ItemGroup>
     <ClInclude Include="include\MapObject.fwd.h" />
     <ClInclude Include="include\MapObjectTypesManager.h" />
+    <ClInclude Include="include\rapidxml-1.13\rapidxml.hpp" />
+    <ClInclude Include="include\rapidxml-1.13\rapidxml_iterators.hpp" />
+    <ClInclude Include="include\rapidxml-1.13\rapidxml_print.hpp" />
+    <ClInclude Include="include\rapidxml-1.13\rapidxml_utils.hpp" />
+    <ClInclude Include="include\ResourceFileHandler.h" />
     <ClInclude Include="include\Territory.fwd.h" />
     <ClInclude Include="include\Window.h" />
     <ClCompile Include="src\Chunk.cpp" />
@@ -34,6 +39,7 @@
     <ClCompile Include="src\Math.cpp" />
     <ClCompile Include="src\Planet.cpp" />
     <ClCompile Include="src\Resource.cpp" />
+    <ClCompile Include="src\ResourceFileHandler.cpp" />
     <ClCompile Include="src\ResourceList.cpp" />
     <ClCompile Include="src\ResourceManager.cpp" />
     <ClCompile Include="src\ResourceQuantity.cpp" />
@@ -136,6 +142,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
